2012-07-31  Dirk Pranke  <dpranke@chromium.org>

        REGRESSION(124116): Number of skipped tests isn't printed anymore
        https://bugs.webkit.org/show_bug.cgi?id=92736

        Reviewed by Tony Chang.

        Add the skipped number back in; it was useful ... also clean up
        the formatting a little bit.

        * Scripts/webkitpy/layout_tests/views/printing.py:
        (Printer.print_found):

2012-07-31  Hans Wennborg  <hans@chromium.org>

        Speech JavaScript API: Throw exception for start() when already started
        https://bugs.webkit.org/show_bug.cgi?id=92756

        Reviewed by Adam Barth.

        Fix the task queue in MockWebSpeechRecognizer.
        It's important that we remove the task from the queue before we run
        it, as running the task could alter the queue's state.

        * DumpRenderTree/chromium/MockWebSpeechRecognizer.cpp:
        (MockWebSpeechRecognizer::abort):
        (MockWebSpeechRecognizer::setError):
        (MockWebSpeechRecognizer::clearTaskQueue):
        (MockWebSpeechRecognizer::StepTask::runIfValid):
        * DumpRenderTree/chromium/MockWebSpeechRecognizer.h:
        (MockWebSpeechRecognizer):

2012-07-31  Dirk Pranke  <dpranke@chromium.org>

        nrwt: move handling the initial list of tests to skip to finder
        https://bugs.webkit.org/show_bug.cgi?id=92701

        Reviewed by Ryosuke Niwa.

        More refactoring of manager ...

        * Scripts/webkitpy/layout_tests/controllers/finder.py:
        (LayoutTestFinder.skip_tests):
        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager._collect_tests):
        (Manager.prepare_lists_and_print_output):

2012-07-31  Alexey Proskuryakov  <ap@apple.com>

        [WK2] Kill the concept of secondary shared process
        https://bugs.webkit.org/show_bug.cgi?id=92676

        Reviewed by Sam Weinig.

        * MiniBrowser/win/BrowserView.cpp: (BrowserView::create): Update Windows build fix.