@@ -1,5 +1,17 @@
 2012-07-31  Dirk Pranke  <dpranke@chromium.org>
 
+        nrwt: --verbose logging does not work right on windows
+        https://bugs.webkit.org/show_bug.cgi?id=92673
+
+        Reviewed by Ojan Vafai.
+
+        Add a test for r124090.
+
+        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
+        (MainTest.test_verbose):
+
+2012-07-31  Dirk Pranke  <dpranke@chromium.org>
+
         REGRESSION(124116): Number of skipped tests isn't printed anymore
         https://bugs.webkit.org/show_bug.cgi?id=92736
 
